@@ -1,6 +1,5 @@
 package com.example.back_end.security;
 
-import com.example.back_end.security.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -41,17 +40,20 @@ public class SecurityConfig {
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         // ✅ Public endpoints - NO authentication
-                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/api/auth/login", "/api/auth/test").permitAll()
+                        // Only the initial CEO self-registration is public.
+                        .requestMatchers("/api/auth/register/ceo").permitAll()
+
                         .requestMatchers("/api/terminal/**").permitAll()
-                        .requestMatchers("/api/orders/**").permitAll()  
+                        .requestMatchers("/api/orders/**").permitAll()
                         .requestMatchers("/api/categories/**").permitAll()
                         .requestMatchers("/api/products/**").permitAll()
 
-
-                        .requestMatchers("/api/dashboard/store/**").hasAnyRole("STORE_MANAGER","CEO")
-                        .requestMatchers("/api/dashboard/inventory/**").hasAnyRole("INVENTORY_MANAGER","CEO")
+                        .requestMatchers("/api/dashboard/store/**").hasAnyRole("STORE_MANAGER", "CEO")
+                        .requestMatchers("/api/dashboard/inventory/**").hasAnyRole("INVENTORY_MANAGER", "CEO")
                         .requestMatchers("/api/forecasting/**").permitAll()
-                                .anyRequest().authenticated()
+
+                        .anyRequest().authenticated()
                 )
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
@@ -61,9 +63,9 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173","http://localhost:5176","http://localhost:5174", "http://localhost:3000"));
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:5176", "http://localhost:5174", "http://localhost:3000"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(java.util.List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
